syntax = "proto3";

package text_tools;
option go_package = "github.com/ekkinox/grpc-demo/proto";
option php_namespace = "App\\TextTools";
option php_metadata_namespace = "App\\GPBMetadata";

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

// https://buf.build/grpc-ecosystem/grpc-gateway/docs/main:grpc.gateway.protoc_gen_openapiv2.options#grpc.gateway.protoc_gen_openapiv2.options.Response
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {
    title: "gRPC: SOA booster";
    version: "1.0";
    contact: {
      name: "Ankorstore";
      url: "https://github.com/ekkinox/grpc-demo";
      email: "amine.abri@ankorstore.com";
    };
    license: {
      name: "MIT License";
      url: "https://github.com/ekkinox/grpc-demo/blob/main/LICENSE";
    };
  };
  external_docs: {
    url: "https://github.com/ekkinox/grpc-demo";
    description: "gRPC: SOA booster";
  }
  schemes: HTTP;
  consumes: "application/json";
  produces: "application/json";
};

enum Transformer {
  TRANSFORMER_UNSPECIFIED = 0;
  TRANSFORMER_UPPERCASE = 1;
  TRANSFORMER_LOWERCASE = 2;
}

message TransformTextRequest {
    Transformer transformer = 1;
    string text = 2;
}

message TransformTextResponse {
  string result = 1;
}

service TextToolsService {
  // Unary rpc
  rpc TransformText(TransformTextRequest) returns (TransformTextResponse) {
    option (google.api.http) = {
      // Route to this method from POST requests to /v1/transform
      post: "/v1/transform",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Transform text";
      tags: "Transform";
    };
  };

  // BiDi rpc
  rpc TransformAndSplitText(stream TransformTextRequest) returns (stream TransformTextResponse) {
    option (google.api.http) = {
      // Route to this method from POST requests to /v1/transform-and-split
      post: "/v1/transform-and-split",
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Transform and  split text";
      tags: "Transform";
    };
  };
}